# Project-Fate

./: CMakeLists.txt  README.md  build.sh  run.sh
src/: header.h  logging.h  main.cpp
